syntax = "proto3";

option optimize_for = SPEED;
// option optimize_for = LITE_RUNTIME;
// option optimize_for = CODE_SIZE;
// --cpp_out=lite:,--cpp_out=
option cc_enable_arenas = true;

// 后台协议常量定义

import "protocol/extension/extensions_error_code.proto";

package hello.err;

enum EnSysErrorType {
  EN_SUCCESS = 0 [(error_code.description) = "成功"];

  EN_SYS_UNKNOWN = -1
                   [(error_code.description) = "未知异常"];

  EN_SYS_PARAM = -1000001
                 [(error_code.description) = "参数错误"];
  EN_SYS_INIT = -1000002
                [(error_code.description) = "初始化错误"];
  EN_SYS_MALLOC = -1000003
                  [(error_code.description) = "分配失败"];
  EN_SYS_NOTFOUND = -1000004
                    [(error_code.description) = "Not Found"];
  EN_SYS_BUFF_EXTEND = -1000005
                       [(error_code.description) = "缓冲区大小超过限制"];
  EN_SYS_BUSY = -1000006
                [(error_code.description) = "正忙"];
  EN_SYS_TIMEOUT = -1000007
                   [(error_code.description) = "操作超时"];
  EN_SYS_PACK = -1000008
                [(error_code.description) = "打包失败"];
  EN_SYS_UNPACK = -1000009
                  [(error_code.description) = "解包失败"];
  EN_SYS_SERVER_SHUTDOWN = -1000010
                           [(error_code.description) = "服务器正在关闭"];
  EN_SYS_NOT_SUPPORT = -1000011
                       [(error_code.description) = "该操作暂不支持"];

  EN_SYS_RPC_CALL = -1000021
                    [(error_code.description) = "通用调用错误"];
  EN_SYS_RPC_NO_TASK = -1000022
                       [(error_code.description) = "不在协程任务中"];
  EN_SYS_RPC_SEND_FAILED = -1000023
                           [(error_code.description) = "发送消息失败"];
  EN_SYS_RPC_TASK_EXITING = -1000024
                            [(error_code.description) = "协程任务正在退出"];
  EN_SYS_RPC_TASK_NOT_FOUND = -1000025
                              [(error_code.description) = "找不到该协程任务"];
  EN_SYS_RPC_TASK_KILLED = -1000026
                           [(error_code.description) = "协程任务被强制关闭"];
  EN_SYS_RPC_TASK_CANCELLED = -1000027
                              [(error_code.description) = "协程任务被取消"];
  EN_SYS_RPC_RETRY_TIMES_EXCEED = -1000029
                                  [(error_code.description) = "RPC超过最大重试次数"];
  EN_SYS_RPC_CALL_NOT_READY = -1000030
                              [(error_code.description) = "RPC调用未完成"];
  EN_SYS_SIGN_VERIFY = -1000031
                       [(error_code.description) = "签名校检失败"];
  EN_SYS_RPC_ALREADY_HAS_RESPONSE = -1000032
                                    [(error_code.description) = "RPC已经有回包"];

  // @see libatbus_error.h
  EN_ATBUS_ERR_BEGIN = -2000000;
  EN_ATBUS_ERR_PARAMS = -2000001
                        [(error_code.description) = "ATBUS参数错误"];
  EN_ATBUS_ERR_INNER = -2000002
                       [(error_code.description) = "ATBUS内部错误"];
  EN_ATBUS_ERR_NO_DATA = -2000003
                         [(error_code.description) = "无数据"];
  EN_ATBUS_ERR_BUFF_LIMIT = -2000004
                            [(error_code.description) = "缓冲区不足"];
  EN_ATBUS_ERR_MALLOC = -2000005
                        [(error_code.description) = "分配失败"];
  EN_ATBUS_ERR_SCHEME = -2000006
                        [(error_code.description) = "协议错误"];
  EN_ATBUS_ERR_BAD_DATA = -2000007
                          [(error_code.description) = "数据校验不通过"];
  EN_ATBUS_ERR_INVALID_SIZE = -2000008
                              [(error_code.description) = "数据大小异常"];
  EN_ATBUS_ERR_NOT_INITED = -2000009
                            [(error_code.description) = "未初始化"];
  EN_ATBUS_ERR_ALREADY_INITED = -2000010
                                [(error_code.description) = "已填充初始数据"];
  EN_ATBUS_ERR_ACCESS_DENY = -2000011
                             [(error_code.description) = "不允许的操作"];
  EN_ATBUS_ERR_UNPACK = -2000012
                        [(error_code.description) = "解包失败"];
  EN_ATBUS_ERR_PACK = -2000013
                      [(error_code.description) = "打包失败"];
  EN_ATBUS_ERR_UNSUPPORTED_VERSION = -2000014
                                     [(error_code.description) = "版本不受支持"];
  EN_ATBUS_ERR_CLOSING = -2000015
                         [(error_code.description) = "正在关闭或已关闭"];
  EN_ATBUS_ERR_ATNODE_NOT_FOUND = -2000065
                                  [(error_code.description) = "查找不到目标节点"];
  EN_ATBUS_ERR_ATNODE_INVALID_ID = -2000066
                                   [(error_code.description) = "不可用的ID"];
  EN_ATBUS_ERR_ATNODE_NO_CONNECTION = -2000067
                                      [(error_code.description) = "无可用连接"];
  EN_ATBUS_ERR_ATNODE_FAULT_TOLERANT = -2000068
                                       [(error_code.description) = "超出容错值"];
  EN_ATBUS_ERR_ATNODE_INVALID_MSG = -2000069
                                    [(error_code.description) = "错误的消息"];
  EN_ATBUS_ERR_ATNODE_BUS_ID_NOT_MATCH = -2000070
                                         [(error_code.description) = "Bus ID不匹配"];
  EN_ATBUS_ERR_ATNODE_TTL = -2000071
                            [(error_code.description) = "ttl限制"];
  EN_ATBUS_ERR_ATNODE_MASK_CONFLICT = -2000072
                                      [(error_code.description) = "域范围错误或冲突"];
  EN_ATBUS_ERR_ATNODE_ID_CONFLICT = -2000073
                                    [(error_code.description) = "ID冲突"];
  EN_ATBUS_ERR_ATNODE_SRC_DST_IS_SAME = -2000075
                                        [(error_code.description) = "发送源和发送目标不能相同"];
  EN_ATBUS_ERR_CHANNEL_SIZE_TOO_SMALL = -2000101
                                        [(error_code.description) = "通道空间过小"];
  EN_ATBUS_ERR_CHANNEL_BUFFER_INVALID = -2000102
                                        [(error_code.description) = "缓冲区错误（已被其他模块使用或检测冲突）"];
  EN_ATBUS_ERR_CHANNEL_ADDR_INVALID = -2000103
                                      [(error_code.description) = "地址错误"];
  EN_ATBUS_ERR_CHANNEL_CLOSING = -2000104
                                 [(error_code.description) = "正在关闭"];
  EN_ATBUS_ERR_CHANNEL_NOT_SUPPORT = -2000105
                                     [(error_code.description) = "不支持的通道"];
  EN_ATBUS_ERR_CHANNEL_UNSUPPORTED_VERSION = -2000106
                                             [(error_code.description) = "通道版本不受支持"];
  EN_ATBUS_ERR_CHANNEL_ALIGN_SIZE_MISMATCH = -2000107
                                             [(error_code.description) = "对齐参数不一致"];
  EN_ATBUS_ERR_CHANNEL_ARCH_SIZE_T_MISMATCH = -2000108
                                              [(error_code.description) = "架构size_t不匹配"];
  EN_ATBUS_ERR_NODE_BAD_BLOCK_NODE_NUM = -2000202
                                         [(error_code.description) = "发现写坏的数据块 - 节点数量错误"];
  EN_ATBUS_ERR_NODE_BAD_BLOCK_BUFF_SIZE = -2000203
                                          [(error_code.description) = "发现写坏的数据块 - 节点数量错误"];
  EN_ATBUS_ERR_NODE_BAD_BLOCK_WSEQ_ID = -2000204
                                        [(error_code.description) = "发现写坏的数据块 - 写操作序列错误"];
  EN_ATBUS_ERR_NODE_BAD_BLOCK_CSEQ_ID = -2000205
                                        [(error_code.description) = "发现写坏的数据块 - 检查操作序列错误"];
  EN_ATBUS_ERR_NODE_TIMEOUT = -2000211
                              [(error_code.description) = "操作超时"];
  EN_ATBUS_ERR_SHM_GET_FAILED = -2000301
                                [(error_code.description) = "连接共享内存出错，具体错误原因可以查看errno或类似的位置"];
  EN_ATBUS_ERR_SHM_NOT_FOUND = -2000302
                               [(error_code.description) = "共享内存未找到"];
  EN_ATBUS_ERR_SHM_CLOSE_FAILED =
      -2000303
      [(error_code.description) = "移除共享内存出错，具体错误原因可以查看errno或类似的位置"];
  EN_ATBUS_ERR_SHM_PATH_INVALID = -2000304
                                  [(error_code.description) = "共享内存地址错误"];
  EN_ATBUS_ERR_SHM_MAP_FAILED = -2000305
                                [(error_code.description) = "共享内存地址映射错误"];
  EN_ATBUS_ERR_SOCK_BIND_FAILED = -2000401
                                  [(error_code.description) = "绑定地址或端口失败"];
  EN_ATBUS_ERR_SOCK_LISTEN_FAILED = -2000402
                                    [(error_code.description) = "监听失败"];
  EN_ATBUS_ERR_SOCK_CONNECT_FAILED = -2000403
                                     [(error_code.description) = "连接失败"];
  EN_ATBUS_ERR_PIPE_BIND_FAILED = -2000501
                                  [(error_code.description) = "绑定地址或端口失败"];
  EN_ATBUS_ERR_PIPE_LISTEN_FAILED = -2000502
                                    [(error_code.description) = "监听失败"];
  EN_ATBUS_ERR_PIPE_CONNECT_FAILED = -2000503
                                     [(error_code.description) = "连接失败"];
  EN_ATBUS_ERR_PIPE_ADDR_TOO_LONG =
      -2000504
      [(error_code.description) = "地址路径过长，绝对路径长度要小于 sizeof(sockaddr_un.sun_path) - 1"];
  EN_ATBUS_ERR_PIPE_REMOVE_FAILED = -2000505
                                    [(error_code.description) = "删除老socket失败"];
  EN_ATBUS_ERR_PIPE_PATH_EXISTS = -2000506
                                  [(error_code.description) = "该地址已被占用"];
  EN_ATBUS_ERR_PIPE_LOCK_PATH_FAILED = -2000507
                                       [(error_code.description) = "锁地址失败"];
  EN_ATBUS_ERR_DNS_GETADDR_FAILED = -2000601
                                    [(error_code.description) = "DNS解析失败"];
  EN_ATBUS_ERR_CONNECTION_NOT_FOUND = -2000602
                                      [(error_code.description) = "找不到连接"];
  EN_ATBUS_ERR_WRITE_FAILED = -2000603
                              [(error_code.description) = "底层API写失败"];
  EN_ATBUS_ERR_READ_FAILED = -2000604
                             [(error_code.description) = "底层API读失败"];
  EN_ATBUS_ERR_EV_RUN = -2000605
                        [(error_code.description) = "底层API事件循环失败"];
  EN_ATBUS_ERR_NO_LISTEN = -2000606
                           [(error_code.description) = "尚未监听（绑定）"];
  EN_ATBUS_ERR_NOT_READY = -2000607
                           [(error_code.description) = "未准备好（没有握手完成）"];

  EN_ROUTER_NOT_FOUND = -10000081
                        [(error_code.description) = "路由信息找不到"];
  EN_ROUTER_TTL_EXTEND = -10000082
                         [(error_code.description) = "TTL超出限制"];
  EN_ROUTER_NOT_IN_SERVER = -10000083
                            [(error_code.description) = "不在任何节点上"];
  EN_ROUTER_TYPE_INVALID = -10000084
                           [(error_code.description) = "路由数据类型未被注册"];
  EN_ROUTER_TYPE_CONFLICT = -10000085
                            [(error_code.description) = "路由数据类型已经被注册"];
  EN_ROUTER_NOT_WRITABLE = -10000086
                           [(error_code.description) = "不可写(不是实体)"];
  EN_ROUTER_IN_OTHER_SERVER = -10000087
                              [(error_code.description) = "在其他节点上"];
  EN_ROUTER_TRANSFER = -10000088
                       [(error_code.description) = "转移失败"];
  EN_ROUTER_CLOSING = -10000089
                      [(error_code.description) = "路由系统正在关闭"];
  EN_ROUTER_ACCESS_DENY = -10000090
                          [(error_code.description) = "路由对象的操作被禁止"];
  EN_ROUTER_EAGAIN = -10000091
                     [(error_code.description) = "路由对象的资源被占用，请稍后重试"];
  EN_ROUTER_BUSSINESS_VERSION_DENY = -10000092
                                     [(error_code.description) = "对象版本号禁止拉取"];

  EN_DB_RECORD_NOT_FOUND = -1000101;
  EN_DB_SEND_FAILED = -1000102;
  EN_DB_OLD_VERSION = -1000103
                      [(error_code.description) = "CAS数据已经过期"];
  EN_DB_REPLY_ERROR = -1000104
                      [(error_code.description) = "数据库返回错误信息"];
  EN_DB_KEY_EXISTS = -1000105
                     [(error_code.description) = "key已经存在"];
  EN_DB_OPERATION_ERROR = -1000106
                          [(error_code.description) = "数据库返回错误"];

  EN_COMMON_LOGIC_TIMER_NEED_COMMON_MODULE =
      -1000201
      [(error_code.description) = "使用定时器必须开启 logic_server_common_module"];

  EN_PLAYER_KICKOUT = -1001001
                      [(error_code.description) = "踢出用户失败"];

  EN_TRANSACTION_NOT_FOUND = -1004001
                             [(error_code.description) = "该事务不存在"];
  EN_TRANSACTION_FINISHED = -1004002
                            [(error_code.description) = "事务已结束"];
  EN_TRANSACTION_ALREADY_RUN = -1004003
                               [(error_code.description) = "事务已运行"];
  EN_TRANSACTION_PARTICIPATOR_NOT_FOUND = -1004101
                                          [(error_code.description) = "该事务没有指定的参与者"];
  EN_TRANSACTION_RESOURCE_PREEMPTED = -1004301
                                      [(error_code.description) = "资源被抢占"];
}
